--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </ul>
       </section>
     </main>
-
+    
     <!-- ТЕМПЛЕЙТЫ -->
 
     <template class="preloader-template">
@@ -115,5 +115,6 @@
       </div>
     </template>
     <script src="./scripts/script.js"></script>
+    <div></div>
   </body>
 </html>
